# SOL-trenches-bot

./: .env.example  .gitignore  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt
deploy/: install.sh  sol-trenches-bot.service  solana-bot.service
docs/: FINAL_DEPLOYMENT_CHECKLIST.md  PHASE_7_QUICK_REFERENCE.md
migrations/: 001_initial.sql  002_strategies.sql  003_price_alerts.sql  004_trench_low_mcap.sql  005_position_overrides.sql
scripts/: generate_wallet.py  intel_smoke.py  manage_smart_wallets.py  nansen_discover.py  phase9_smoke.py  refresh_smart_wallets.py  run_backtest.py  run_weekly_tuner.py  test_connections.py
src/: config.py  main.py
src/ai/: __init__.py  cost_tracker.py  lesson_store.py  llm_client.py  llm_provider.py  meme_quality_scorer.py  meme_score_cache.py  openclaw_client.py  privacy_filter.py  (+6 more)
tests/: test_alphavantage_client.py  test_backtester.py  test_bundler_pattern_detector.py  test_circuit_breaker.py  test_coingecko_client.py  test_config.py  test_crossref_validator.py  test_cryptopanic_client.py  test_cryptoquant_client.py  test_fib_entry_calculator.py  test_global_fee_analyzer.py  test_gmgn_swap.py  test_health.py  test_llm_provider.py  test_macro_regime.py  test_meme_quality_scorer.py  test_messari_client.py  test_metrics.py  test_news_aggregator.py  test_phase11_overrides.py  test_price_alerts.py  test_pumpfun_feeclaim.py  test_rate_limiter.py  test_scoring.py  test_smart_wallet_registry.py  test_strategy_manager.py  test_telegram_menus.py  test_tokito_client.py  test_top_holder_balance.py  test_trader_signal_aggregator.py  test_wallet_funded_analyzer.py
(+67 files in other folders)
